Fixed 'G' letter misaligned

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -14,7 +14,7 @@ main {
     letter-spacing: -3px;
 
     display: flex;
-    align-items: flex-end;
+    align-items: baseline;
 
     span:not(:first-child) {
       font-size: 80px;
